# blola

./: .gitignore  CMakeLists.txt  Makefile  README.md  blola.py
blola/: blola.hpp  config.hpp  directWrite_SEGGER_RTT.hpp  directWrite_stdout.hpp  format.hpp  platform.hpp
blola/configured/: SEGGER_RTT.hpp  debug-stdout.hpp  stdout.hpp
examples/just_log/: main.cpp
examples/strings/: main.cpp
